--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[onecolumn,draftcls,12pt]{IEEEtran}
+\documentclass[onecolumn,draftcls,12pt,conference]{IEEEtran}
 
 \usepackage[hidelinks]{hyperref}
 \usepackage{cite}
@@ -6,8 +6,14 @@
 
 \title{NumNN.jl Deeplearning Package for Fast Testing and Simulating Number Systems on Neural Networks}
 
-\author{\IEEEauthorblockN{Mohammad~Hizzani} \\ \IEEEauthorblockA{University of Lisbon}\\
-\href{mailto:moh.hizzani@gmail.com}{moh.hizzani@gmail.com}}
+\author{\IEEEauthorblockN{Mohammad~Hizzani} \IEEEauthorblockA{University of Lisbon\\
+		Email: \href{mailto:moh.hizzani@gmail.com}{moh.hizzani@gmail.com}}
+	%\and
+	%\IEEEauthorblockN{Leonel Sousa}
+	%\IEEEauthorblockA{University of Lisbon\\
+	%Email: some@sdf.com}
+}
+
 
 \begin{document}
 	\maketitle
