add mint package

--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,9 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{cite}
 
+%%% for code wraping
+\usepackage{minted}
+\usemintedstyle{colorful}
 
 \title{NumNN.jl Deeplearning Package for Fast Testing and Simulating Number Systems on Neural Networks}
 
