--- a/main.tex
+++ b/main.tex
@@ -3,10 +3,17 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{cite}
 
+\usepackage{caption}
+%\usepackage{graphicx}
+%\usepackage{float}
+%\usepackage{listing}
 %%% for code wraping
 \usepackage{minted}
 \usemintedstyle{colorful}
 
+%\renewcommand{\fontnotesize}{9pt}
+%\setlength{\fontnotesize}{9}
+%\fontnotesize
 \title{NumNN.jl Deeplearning Package for Fast Testing and Simulating Number Systems on Neural Networks}
 
 \author{\IEEEauthorblockN{Mohammad~Hizzani} \IEEEauthorblockA{University of Lisbon\\
