--- a/introduction.tex
+++ b/introduction.tex
@@ -28,4 +28,4 @@ Note how the result was promoted to be in \mintinline{julia}{Float64} because of
 
 Divide and conquer is an essential way of development, which facilitates the focus on smaller pieces in a process. Hence, this property of Julia (Multiple Dispatch) makes it much easier to separate different steps of development which means less time is used on editing and modification, and more time used for designing, testing and development. In the upcoming sections it will be presented what methods of functions of NumNN any new number system should defined beforehand.
 
-Furthermore, Julia provides a native support for parallel operations namely co-routines, multi-threads and multi-core. Mostly no new code is needed for parallel operations, and when needed, the same code with some macros do the job. In the same way, for-loops in Julia are extremely fast as C-like fast of for-loops. 
+Furthermore, Julia provides a native support for parallel operations namely co-routines, multi-threads and multi-core. Mostly no new code is needed for parallel operations, and when needed, the same code with some macros do the job. In the same way, for-loops in Julia are extremely fast as fast as for-loops of C-like. 
