use xcolor package

--- a/main.tex
+++ b/main.tex
@@ -14,6 +14,8 @@
 %\usepackage{graphicx}
 %\usepackage{float}
 %\usepackage{listing}
+\usepackage[dvipsnames]{xcolor}
+\colorlet{LGray}{Gray!10!}
 %%% for code wraping
 \usepackage{minted}
 \usemintedstyle{colorful}
