body till actFun

--- a/introduction.tex
+++ b/introduction.tex
@@ -13,7 +13,7 @@ Julia \cite{Julia,Bezanson2017} is a high-level programming language that was de
 Moreover, Julia provides a novel way of multiple dispatch\cite{WikiMultipleDispatch} concept in programming languages\cite{JuliaMehtods}. Multiple Dispatch in a nutshell is that a function with a single name has different process (methods) base on its argument(s). Examples of multiple dispatch are the primitive operations (addition, subtraction, multiplication and division) as follows:
 
 \begin{listing}[H]
-\begin{minted}[frame=single,fontsize=\footnotesize ,breaklines]{julia}
+\begin{minted}[frame=lines,rulecolor=MidnightBlue,bgcolor=LGray,fontsize=\footnotesize ,breaklines]{julia}
 julia> aInt, bInt = 1, 2; #these are Integers
 
 julia> aF, bF = 1.0, 2.0; #there are Floats
