--- a/main.bib
+++ b/main.bib
@@ -1,3 +1,20 @@
+@inproceedings{Szegedy2016,
+abstract = {Convolutional networks are at the core of most state of-the-art computer vision solutions for a wide variety of tasks. Since 2014 very deep convolutional networks started to become mainstream, yielding substantial gains in various benchmarks. Although increased model size and computational cost tend to translate to immediate quality gains for most tasks (as long as enough labeled data is provided for training), computational efficiency and low parameter count are still enabling factors for various use cases such as mobile vision and big-data scenarios. Here we are exploring ways to scale up networks in ways that aim at utilizing the added computation as efficiently as possible by suitably factorized convolutions and aggressive regularization. We benchmark our methods on the ILSVRC 2012 classification challenge validation set demonstrate substantial gains over the state of the art: 21:2{\%} top-1 and 5:6{\%} top-5 error for single frame evaluation using a network with a computational cost of 5 billion multiply-adds per inference and with using less than 25 million parameters. With an ensemble of 4 models and multi-crop evaluation, we report 3:5{\%} top-5 error and 17:3{\%} top-1 error on the validation set and 3:6{\%} top-5 error on the official test set.},
+archivePrefix = {arXiv},
+arxivId = {1512.00567},
+author = {Szegedy, Christian and Vanhoucke, Vincent and Ioffe, Sergey and Shlens, Jon and Wojna, Zbigniew},
+booktitle = {Proceedings of the IEEE Computer Society Conference on Computer Vision and Pattern Recognition},
+doi = {10.1109/CVPR.2016.308},
+eprint = {1512.00567},
+file = {:home/mhizzani/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Szegedy et al. - 2016 - Rethinking the Inception Architecture for Computer Vision.pdf:pdf},
+isbn = {9781467388504},
+issn = {10636919},
+pages = {2818--2826},
+publisher = {IEEE Computer Society},
+title = {{Rethinking the Inception Architecture for Computer Vision}},
+volume = {2016-December},
+year = {2016}
+}
 @misc{JuliaMehtods,
 title = {{Julia Methods}},
 url = {https://docs.julialang.org/en/v1/manual/methods/{\#}Defining-Methods-1}
